--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <!-- ssh/scp -->
         <dependency>
             <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd</artifactId>
+``            <artifactId>sshd-core</artifactId>
             <version>1.1.0</version>
         </dependency>
 
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>com.github.davidcarboni</groupId>
             <artifactId>cryptolite</artifactId>
-            <version>1.3.3-SNAPSHOT</version>
+            <version>1.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.bouncycastle</groupId>
