--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <!-- ssh/scp -->
         <dependency>
             <groupId>org.apache.sshd</groupId>
-``            <artifactId>sshd-core</artifactId>
+            <artifactId>sshd-core</artifactId>
             <version>1.1.0</version>
         </dependency>
 
