--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>2.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.16</version>
+        </dependency>
+
 
         <!-- Test -->
         <dependency>
@@ -159,6 +165,10 @@
                         </goals>
                         <configuration>
                             <transformers>
+                                <!-- add Main-Class to manifest file -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.github.davidcarboni.restolino.Main</mainClass>
+                                </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                         </configuration>
