--- a/pom.xml
+++ b/pom.xml
@@ -47,12 +47,12 @@
             <groupId>com.github.davidcarboni</groupId>
             <artifactId>cryptolite</artifactId>
             <version>1.3.3</version>
-            <exclusions>
+<!--            <exclusions>
                 <exclusion>
                     <groupId>org.bouncycastle</groupId>
                     <artifactId>bcprov-jdk15on</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
         </dependency>
 
 
@@ -167,10 +167,16 @@
                             <transformers>
                                 <!-- add Main-Class to manifest file -->
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.github.davidcarboni.restolino.Main</mainClass>
+                                    <!--<mainClass>com.github.davidcarboni.restolino.Main</mainClass>-->
+                                    <manifestEntries>
+                                        <Main-Class>com.github.davidcarboni.restolino.Main</Main-Class>
+                                        <!-- add current dir '.' and conf/ dir to the classpath -->
+                                       <!-- <Class-Path>/dependency ./bcprov-jdk15-140.jar conf/ conf/bcprov-jdk15-140.jar</Class-Path>-->
+                                    </manifestEntries>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
+                            <minimizeJar>false</minimizeJar>
                         </configuration>
                     </execution>
                 </executions>
