--- a/ci/build.yml
+++ b/ci/build.yml
@@ -6,12 +6,13 @@ image_resource:
   type: docker-image
   source:
     repository: maven
+    tag: 3.5.0-jdk-8
 
 inputs:
   - name: dylan
 
 outputs:
-  - name: target
+  - name: build
 
 run:
   path: dylan/ci/scripts/build.sh
